# src/request/models/TypesListUserResp.ts
@@ -1,0 +1,120 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Swagger Example API
+ * This is a sample server celler server.
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: support@swagger.io
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime'
+import type { TypesListUserData } from './TypesListUserData'
+import { TypesListUserDataFromJSON, TypesListUserDataFromJSONTyped, TypesListUserDataToJSON } from './TypesListUserData'
+
+/**
+ *
+ * @export
+ * @interface TypesListUserResp
+ */
+export interface TypesListUserResp {
+  /**
+   *
+   * @type {string}
+   * @memberof TypesListUserResp
+   */
+  code: string
+  /**
+   *
+   * @type {number}
+   * @memberof TypesListUserResp
+   */
+  current: number
+  /**
+   *
+   * @type {Array<TypesListUserData>}
+   * @memberof TypesListUserResp
+   */
+  data: Array<TypesListUserData>
+  /**
+   *
+   * @type {string}
+   * @memberof TypesListUserResp
+   */
+  message: string
+  /**
+   *
+   * @type {number}
+   * @memberof TypesListUserResp
+   */
+  pageSize: number
+  /**
+   *
+   * @type {boolean}
+   * @memberof TypesListUserResp
+   */
+  success: boolean
+  /**
+   *
+   * @type {number}
+   * @memberof TypesListUserResp
+   */
+  total: number
+}
+
+/**
+ * Check if a given object implements the TypesListUserResp interface.
+ */
+export function instanceOfTypesListUserResp(value: object): boolean {
+  let isInstance = true
+  isInstance = isInstance && 'code' in value
+  isInstance = isInstance && 'current' in value
+  isInstance = isInstance && 'data' in value
+  isInstance = isInstance && 'message' in value
+  isInstance = isInstance && 'pageSize' in value
+  isInstance = isInstance && 'success' in value
+  isInstance = isInstance && 'total' in value
+
+  return isInstance
+}
+
+export function TypesListUserRespFromJSON(json: any): TypesListUserResp {
+  return TypesListUserRespFromJSONTyped(json, false)
+}
+
+export function TypesListUserRespFromJSONTyped(json: any, ignoreDiscriminator: boolean): TypesListUserResp {
+  if (json === undefined || json === null) {
+    return json
+  }
+  return {
+    code: json['code'],
+    current: json['current'],
+    data: (json['data'] as Array<any>).map(TypesListUserDataFromJSON),
+    message: json['message'],
+    pageSize: json['pageSize'],
+    success: json['success'],
+    total: json['total'],
+  }
+}
+
+export function TypesListUserRespToJSON(value?: TypesListUserResp | null): any {
+  if (value === undefined) {
+    return undefined
+  }
+  if (value === null) {
+    return null
+  }
+  return {
+    code: value.code,
+    current: value.current,
+    data: (value.data as Array<any>).map(TypesListUserDataToJSON),
+    message: value.message,
+    pageSize: value.pageSize,
+    success: value.success,
+    total: value.total,
+  }
+}
