# swagger/swagger.json
@@ -86,6 +86,73 @@
         }
       }
     },
+    "/api/sys/user/list": {
+      "get": {
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "description": "user list",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "tags": ["pure"],
+        "summary": "user list logic",
+        "operationId": "UserList",
+        "parameters": [
+          {
+            "type": "integer",
+            "description": "List User",
+            "name": "Current",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "description": "List User",
+            "name": "PageSize",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "List User",
+            "name": "Name",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "List User",
+            "name": "NickName",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "List User",
+            "name": "Mobile",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "List User",
+            "name": "Email",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "description": "List User",
+            "name": "Status",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/types.ListUserResp"
+            }
+          }
+        }
+      }
+    },
     "/api/sys/user/login": {
       "post": {
         "description": "user login",
@@ -176,7 +243,7 @@
           "type": "integer"
         },
         "path": {
-          "description": "菜单URL,类型：1.普通页面（如用户管理， /sysmodel/user） 2.嵌套完整外部页面，以http(s)开头的链接 3.嵌套服务器页面，使用iframe:前缀+目标URL(如SQL监控， iframe:/druid/login.html, iframe:前缀会替换成服务器地址)",
+          "description": "菜单Path,类型：1.普通页面（如用户管理， /sysmodel/user） 2.嵌套完整外部页面，以http(s)开头的链接 3.嵌套服务器页面，使用iframe:前缀+目标URL(如SQL监控， iframe:/druid/login.html, iframe:前缀会替换成服务器地址)",
           "type": "string"
         },
         "perms": {
@@ -191,13 +258,126 @@
     },
     "types.ListMenuResp": {
       "type": "object",
-      "required": ["data", "success", "total"],
+      "required": ["code", "data", "message", "success", "total"],
       "properties": {
+        "code": {
+          "type": "string"
+        },
         "data": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/types.ListMenuData"
           }
+        },
+        "message": {
+          "type": "string"
+        },
+        "success": {
+          "type": "boolean"
+        },
+        "total": {
+          "type": "integer"
+        }
+      }
+    },
+    "types.ListUserData": {
+      "type": "object",
+      "required": [
+        "avatar",
+        "createBy",
+        "createTime",
+        "delFlag",
+        "email",
+        "id",
+        "lastUpdateBy",
+        "lastUpdateTime",
+        "mobile",
+        "name",
+        "nickName",
+        "password",
+        "salt",
+        "status"
+      ],
+      "properties": {
+        "avatar": {
+          "description": "头像",
+          "type": "string"
+        },
+        "createBy": {
+          "description": "创建人",
+          "type": "string"
+        },
+        "createTime": {
+          "description": "创建时间",
+          "type": "string"
+        },
+        "delFlag": {
+          "description": "是否删除  -1：已删除  0：正常",
+          "type": "integer"
+        },
+        "email": {
+          "description": "邮箱",
+          "type": "string"
+        },
+        "id": {
+          "description": "编号",
+          "type": "integer"
+        },
+        "lastUpdateBy": {
+          "description": "更新人",
+          "type": "string"
+        },
+        "lastUpdateTime": {
+          "description": "更新时间",
+          "type": "string"
+        },
+        "mobile": {
+          "description": "手机号",
+          "type": "string"
+        },
+        "name": {
+          "description": "用户名",
+          "type": "string"
+        },
+        "nickName": {
+          "description": "昵称",
+          "type": "string"
+        },
+        "password": {
+          "description": "密码",
+          "type": "string"
+        },
+        "salt": {
+          "description": "加密盐",
+          "type": "string"
+        },
+        "status": {
+          "description": "状态  0：禁用   1：正常",
+          "type": "integer"
+        }
+      }
+    },
+    "types.ListUserResp": {
+      "type": "object",
+      "required": ["code", "current", "data", "message", "pageSize", "success", "total"],
+      "properties": {
+        "code": {
+          "type": "string"
+        },
+        "current": {
+          "type": "integer"
+        },
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/types.ListUserData"
+          }
+        },
+        "message": {
+          "type": "string"
+        },
+        "pageSize": {
+          "type": "integer"
         },
         "success": {
           "type": "boolean"
@@ -248,9 +428,15 @@
     },
     "types.UserInfoResp": {
       "type": "object",
-      "required": ["avatar", "name"],
+      "required": ["avatar", "code", "message", "name"],
       "properties": {
         "avatar": {
+          "type": "string"
+        },
+        "code": {
+          "type": "string"
+        },
+        "message": {
           "type": "string"
         },
         "name": {
